--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -27,6 +27,9 @@
 ************* End: Media Max Width 400 ***********
 *************************************************/
 
+.bg-success, .bg-danger {
+	padding: 10px 20px;
+}
 
 /*************************************************
 *************** Start: Master Header *************
@@ -96,13 +99,32 @@
 *************************************************/
 /*Footer*/
 .footer {
-	p { float: left; }
-	a { color: #000000; /*text-decoration: underline;*/ }
-	ul { list-style: none; margin: 0px; padding: 0px 0px; float: right; }
-	li { float: left; padding: 0px 5px; }
-	.weixin_qr { float: right; margin-bottom: 15px; 
-		li{ float: none; }
+
+	ul {
+		list-style: none; margin: 0px; padding: 0px;
 	}
+
+	.app-block { text-align: center; padding-bottom: 25px;
+
+		.app-container { display: inline-block; 
+			.app-item { float: left; padding: 0px 10px;
+				li:nth-child(2) {
+					font-weight: bold;
+				}
+			}
+		}
+	}
+
+	.bottom {
+		p { float: left; }
+		a { color: #000000; /*text-decoration: underline;*/ }
+
+		// disclaimer
+		ul { float: right;
+			li { float: left; padding: 0px 7px; }
+		}
+	}	
+
 }
 /*************************************************
 *************** END: Master Footer *************
