--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -389,6 +389,47 @@
   #marketNewsLabel { font-weight: bold; }
   #marketNewsDatetime { font-size: 14px; }
 }
+
+#stock-enquiry-block {
+
+	h4 { padding-bottom: 10px; }
+
+	#stock-enquiry {
+		input { padding: 2px 10px; width: 100% }
+	}
+
+}
+
+#stock-result-block {  padding: 10px 0 0;
+
+  .heading { font-weight: bold; font-size: 25px; }
+
+  .row {  padding: 5px 0;
+
+    .last-price {
+      font-size: 30px;
+      font-weight: bold;
+      // padding: 0 10px;
+      display: inline-block;
+    }
+
+    .open {
+      text-align: center;
+      font-size: 16px;
+    }
+
+    .small {
+      text-align: center;
+    }
+
+    .update-time {
+      text-align: right;
+      font-size: 12px;
+    }
+
+  }
+
+}
 /*************************************************
 ************** End: Market News Page ***********
 *************************************************/
