--- a/public/css/app.css
+++ b/public/css/app.css
@@ -224,7 +224,7 @@
   text-align: center; }
   .service-block .img-block img {
     width: 90%;
-    padding-top: 10px;
+    /*margin-top: 10px;*/
     height: 225px; }
 
 .stock-block {
@@ -301,6 +301,22 @@
 .contact-us-block .title, .contact-us-block .content {
   padding-bottom: 10px;
   font-size: 15px; }
+
+.ad-app-block {
+  text-align: center; }
+  .ad-app-block h4 {
+    text-align: left;
+    padding-bottom: 10px; }
+  .ad-app-block .app-image img {
+    width: 210px; }
+  .ad-app-block ul {
+    margin: 0;
+    padding: 0;
+    list-style: none; }
+    .ad-app-block ul li {
+      text-align: center; }
+      .ad-app-block ul li img {
+        margin-top: 10px; }
 
 /*************************************************
 ****************** END: Home Page ****************
@@ -409,7 +425,7 @@
       font-weight: bold;
       border-top: 0; }
     .stock-block .mostActive-block .most-active .mostActive-realtime-thead th {
-      text-align: center; }
+      text-align: right; }
       .stock-block .mostActive-block .most-active .mostActive-realtime-thead th:nth-child(1), .stock-block .mostActive-block .most-active .mostActive-realtime-thead th:nth-child(2) {
         text-align: left; }
     .stock-block .mostActive-block .most-active .mostActive-realtime {
@@ -452,7 +468,8 @@
       text-align: center;
       font-size: 16px; }
     #stock-result-block .row .small {
-      text-align: center; }
+      text-align: center;
+      padding: 0 5px; }
     #stock-result-block .row .update-time {
       text-align: right;
       font-size: 12px; }
