News, Routing, API, Seeding

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -239,7 +239,7 @@
 
 			thead th { color: #000000; font-weight: bold; }
 			.loading td { height: 190px; text-align: center; vertical-align: middle; }
-            .news-realtime { display: none; font-size: 12px;
+            .news-realtime { font-size: 12px;
                 td { cursor: pointer; }
 			}
 
@@ -352,7 +352,7 @@
 
       thead th { color: #000000; font-weight: bold; }
       .loading td { height: 190px; text-align: center; vertical-align: middle; }
-      .news-realtime { display: none; font-size: 12px;
+      .news-realtime { font-size: 12px;
         td { cursor: pointer;
           span { color: deepskyblue; }
         }
