--- a/public/css/app.css
+++ b/public/css/app.css
@@ -224,7 +224,7 @@
   text-align: center; }
   .service-block .img-block img {
     width: 90%;
-    /*margin-top: 10px;*/
+    padding-top: 10px;
     height: 225px; }
 
 .stock-block {
@@ -253,7 +253,6 @@
       text-align: center;
       vertical-align: middle; }
     .stock-block .news-block .market-news .news-realtime {
-      display: none;
       font-size: 12px; }
       .stock-block .news-block .market-news .news-realtime td {
         cursor: pointer; }
@@ -389,7 +388,6 @@
       text-align: center;
       vertical-align: middle; }
     .stock-block .news-block .market-news .news-realtime {
-      display: none;
       font-size: 12px; }
       .stock-block .news-block .market-news .news-realtime td {
         cursor: pointer; }
