--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -5,6 +5,11 @@
 *************************************************/
 @media (max-width: 991px) {
 	.lang-bar {		position: absolute;		top: 0;		right: 0;	}
+	.stock-block {
+		.rm-margin {
+
+		}
+	}
 } 
 /*************************************************
 ************* End: Media Max Width 991 *************
@@ -29,6 +34,21 @@
 
 .bg-success, .bg-danger {
 	padding: 10px 20px;
+}
+
+.rm-margin {
+	div {
+		margin: 0;
+		padding: 0;
+
+		&:nth-child(1) {
+			padding-right: 10px;
+		}
+
+		&:nth-child(2) {
+			padding-left: 10px;
+		}
+	}
 }
 
 /*************************************************
@@ -126,6 +146,10 @@
 	}	
 
 }
+
+.overlay-loading .modal-content{
+	padding: 20px 100px; text-align: center; font-size: 24px; color: #fff; background-color: #337ab7; border-color: #2e6da4;
+}
 /*************************************************
 *************** END: Master Footer *************
 *************************************************/
@@ -181,12 +205,21 @@
 			ul { margin: 0; padding: 0; list-style: none;
 
 				li {
-					&:nth-child(1) { padding-bottom: 25px; }
-					&:nth-child(2) { text-align: right; }
+
+					//&:nth-child(1) { padding-bottom: 25px; }
+					//&:nth-child(2) { text-align: right; }
 				}
 
 			}
 			
+		}
+
+		ul .app-item {
+			float: left;
+			text-align: center;
+			img {
+				height: 56px;
+			}
 		}
 		
 	} // End: App Trading
@@ -266,6 +299,9 @@
 		textarea { font-size: 15px; width: 100%; height: 100px; padding: 5px 7px; }
 		.submit { width: auto; }
 		i { width: 25px; padding-right: 10px; }
+		.rm-margin {
+			padding: 0;
+		}
 	}
 
 	.title { font-weight: bold; }
@@ -429,6 +465,8 @@
 
   .row {  padding: 5px 0;
 
+	  font-weight: bold;
+
     .last-price {
       font-size: 30px;
       font-weight: bold;
@@ -444,6 +482,10 @@
     .small {
       text-align: center;
       padding: 0 5px;
+
+      span {
+        font-weight: 100;
+      }
     }
 
     .update-time {
@@ -458,3 +500,7 @@
 ************** End: Market News Page ***********
 *************************************************/
 
+.structure-coming {
+  text-align: center;
+  padding: 100px 0px;
+}
