--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -295,6 +295,7 @@
 	.information {
 		.row { padding: 0 15px; }
 		h2 { margin-top: 0; }
+        select { width: 100%; font-size: 15px; padding: 2px 7px; }
 		input { width: 100%; font-size: 15px; padding: 2px 7px; }
 		textarea { font-size: 15px; width: 100%; height: 100px; padding: 5px 7px; }
 		.submit { width: auto; }
@@ -496,6 +497,8 @@
   }
 
 }
+
+.market-news-menu .active { border-bottom: double; }
 /*************************************************
 ************** End: Market News Page ***********
 *************************************************/
