Adjust header footer and homepage view, remove backend route

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -90,8 +90,9 @@
   .masthead .login-block {
     background-color: #2d318a;
     color: #FFFFFF;
-    font-size: 20px;
+    font-size: 27px;
     font-weight: bold;
+    height: 56px;
     position: absolute;
     bottom: 0;
     right: 0;
@@ -100,6 +101,16 @@
     padding: 9px 25px 9px 44px;
     list-style: none;
     border-top-left-radius: 18px; }
+    .masthead .login-block ul {
+      padding: 0 0 0 10px;
+      margin: 0;
+      list-style: none;
+      float: right;
+      font-size: 46px;
+      position: relative;
+      top: -14px; }
+      .masthead .login-block ul li {
+        float: right; }
 
 /*************************************************
 **************** End: Master Header **************
