--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5,29 +5,34 @@
   .lang-bar {
     position: absolute;
     top: 0;
-    right: 0; } }
+    right: 0; }
+  .hidden-custom {
+    display: none !important; } }
+
+@media (max-width: 560px) {
+  .company-name li {
+    foat: none;
+    text-align: center; }
+    .company-name li:nth-child(1) {
+      font-size: 25px !important; }
+    .company-name li:nth-child(2) {
+      font-size: 15px !important; }
+  .masthead h3 {
+    padding-bottom: 0 !important; }
+    .masthead h3 img {
+      float: none; }
+  .footer .app-block .app-container .app-item {
+    float: none !important; } }
+
+@media (max-width: 397px) {
+  .masthead h3 img {
+    padding: 0 130px !important; }
+  .company-name li {
+    text-align: center;
+    padding: 10px 35px 0 !important; } }
 
 /*************************************************
 ************* End: Media Max Width 991 *************
-*************************************************/
-/*************************************************
-************ Start: Media Max Width 400 **********
-*************************************************/
-@media (max-width: 400px) {
-  .masthead h3 img {
-    position: absolute;
-    top: -2px;
-    left: -9px;
-    height: 35px !important; }
-  .masthead .company-name {
-    height: 88px; }
-    .masthead .company-name:nth-child(1) {
-      font-size: 25px !important; }
-    .masthead .company-name:nth-child(2) {
-      font-size: 18px !important; } }
-
-/*************************************************
-************* End: Media Max Width 400 ***********
 *************************************************/
 .bg-success, .bg-danger {
   padding: 10px 20px; }
