change mobile nav menu

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9,6 +9,14 @@
   .hidden-custom {
     display: none !important; } }
 
+@media (max-width: 767px) {
+  .navbar-main {
+    display: none; }
+  .nav-custom {
+    display: block !important; }
+    .nav-custom li {
+      float: left; } }
+
 @media (max-width: 560px) {
   .company-name li {
     foat: none;
