--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9,35 +9,51 @@
   .hidden-custom {
     display: none !important; } }
 
-@media (max-width: 767px) {
-  .navbar-main {
-    display: none; }
-  .nav-custom {
-    display: block !important; }
-    .nav-custom li {
-      float: left; } }
+/*@media (max-width: 767px) {
 
-@media (max-width: 560px) {
-  .company-name li {
-    foat: none;
-    text-align: center; }
-    .company-name li:nth-child(1) {
-      font-size: 25px !important; }
-    .company-name li:nth-child(2) {
-      font-size: 15px !important; }
+	.navbar-main {
+		display: none;
+	}
+
+	.nav-custom {
+		display: block !important;
+		li {
+			float: left;
+		}
+	}
+
+}*/
+@media (min-width: 410px) and (max-width: 600px) {
+  .company-name li:nth-child(1) {
+    padding-left: 15px !important; }
+  .company-name li:nth-child(2) {
+    padding-left: 15px !important; } }
+
+@media (max-width: 600px) {
+  .company-name li:nth-child(1) {
+    font-size: 25px !important; }
+  .company-name li:nth-child(2) {
+    font-size: 15px !important; }
   .masthead h3 {
     padding-bottom: 0 !important; }
     .masthead h3 img {
-      float: none; }
+      position: relative;
+      top: -10px; }
   .footer .app-block .app-container .app-item {
     float: none !important; } }
 
-@media (max-width: 397px) {
-  .masthead h3 img {
-    padding: 0 130px !important; }
-  .company-name li {
-    text-align: center;
-    padding: 10px 35px 0 !important; } }
+@media (max-width: 410px) {
+  .masthead h3 {
+    width: 100%;
+    text-align: center; }
+    .masthead h3 img {
+      padding-left: 0 !important;
+      float: none !important; }
+    .masthead h3 .company-name {
+      float: none !important; }
+      .masthead h3 .company-name li {
+        text-align: center;
+        padding-left: 0 !important; } }
 
 /*************************************************
 ************* End: Media Max Width 991 *************
@@ -57,7 +73,7 @@
 *************** Start: Master Header *************
 *************************************************/
 .masthead {
-  display: inline-block;
+  /*display: inline-block;*/
   background-color: #3471a7;
   width: 100%;
   position: relative;
