--- a/public/css/app.css
+++ b/public/css/app.css
@@ -65,9 +65,9 @@
   margin: 0;
   padding: 0; }
   .rm-margin div:nth-child(1) {
-    padding-right: 10px; }
+    padding: 0 10px; }
   .rm-margin div:nth-child(2) {
-    padding-left: 10px; }
+    padding: 0 10px; }
 
 /*************************************************
 *************** Start: Master Header *************
