--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -112,11 +112,11 @@
 		padding: 0;
 
 		&:nth-child(1) {
-			padding-right: 10px;
+			padding: 0 10px;
 		}
 
 		&:nth-child(2) {
-			padding-left: 10px;
+			padding: 0 10px;
 		}
 	}
 }
