--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -574,8 +574,9 @@
     }
 
     .update-time {
-      text-align: right;
-      font-size: 12px;
+		text-align: right;
+		font-size: 12px;
+		font-weight: 100;
     }
 
   }
