--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,11 @@
+@media (min-width: 992px) {
+  .stock-block .left .left {
+    padding-right: 5px; }
+  .stock-block .left .right {
+    padding-left: 5px; }
+  .stock-block .right {
+    padding-left: 10px; } }
+
 /*************************************************
 ************ Start: Media Max Width 991 **********
 *************************************************/
@@ -60,14 +68,6 @@
 *************************************************/
 .bg-success, .bg-danger {
   padding: 10px 20px; }
-
-.rm-margin div {
-  margin: 0;
-  padding: 0; }
-  .rm-margin div:nth-child(1) {
-    padding: 0 10px; }
-  .rm-margin div:nth-child(2) {
-    padding: 0 10px; }
 
 /*************************************************
 *************** Start: Master Header *************
@@ -164,18 +164,18 @@
       .footer .app-block .app-container .app-item li:nth-child(2) {
         font-weight: bold; }
 
-.footer .bottom p {
-  float: left; }
-
-.footer .bottom a {
-  color: #000000;
-  /*text-decoration: underline;*/ }
-
-.footer .bottom ul {
-  float: right; }
-  .footer .bottom ul li {
-    float: left;
-    padding: 0 7px; }
+.footer .bottom {
+  margin: 0 10px; }
+  .footer .bottom p {
+    float: left; }
+  .footer .bottom a {
+    color: #000000;
+    /*text-decoration: underline;*/ }
+  .footer .bottom ul {
+    float: right; }
+    .footer .bottom ul li {
+      float: left;
+      padding: 0 7px; }
 
 .overlay-loading .modal-content {
   padding: 20px 100px;
@@ -285,7 +285,7 @@
     height: 225px; }
 
 .stock-block {
-  padding-top: 25px; }
+  padding: 25px 10px 0px 10px; }
   .stock-block .glyphicon-arrow-up {
     color: green; }
   .stock-block .glyphicon-arrow-down {
@@ -315,16 +315,20 @@
         cursor: pointer; }
 
 /*About Us*/
-.about-us-block .page-title {
-  padding-bottom: 0; }
+.about-us-block {
+  padding: 0px 10px; }
+  .about-us-block .page-title {
+    padding-bottom: 0; }
+  .about-us-block ul {
+    list-style: none;
+    margin: 0;
+    padding: 0 15px; }
+  .about-us-block .stock-block {
+    padding: 15px 15px 0; }
 
-.about-us-block ul {
-  list-style: none;
-  margin: 0;
-  padding: 0 15px; }
-
-.about-us-block .stock-block {
-  padding: 15px 15px 0; }
+.appointment-block {
+  max-width: 500px;
+  margin: auto; }
 
 /*Contact US*/
 .contact-us-block .information .row {
@@ -355,9 +359,6 @@
 .contact-us-block .information i {
   width: 25px;
   padding-right: 10px; }
-
-.contact-us-block .information .rm-margin {
-  padding: 0; }
 
 .contact-us-block .title {
   font-weight: bold; }
