--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,15 +1,26 @@
 //@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
+@media (min-width: 992px) {
+	.stock-block {
+		.left {
+			.left {
+				padding-right: 5px;
+			}
+			.right {
+				padding-left: 5px;
+			}
+		}
+		.right {
+			padding-left: 10px;
+		}
+	}
+}
+
 /*************************************************
 ************ Start: Media Max Width 991 **********
 *************************************************/
 @media (max-width: 991px) {
 	.lang-bar {		position: absolute;		top: 0;		right: 0;	}
-	.stock-block {
-		.rm-margin {
-
-		}
-	}
 	.hidden-custom {
 		display: none !important;;
 	}
@@ -104,21 +115,6 @@
 
 .bg-success, .bg-danger {
 	padding: 10px 20px;
-}
-
-.rm-margin {
-	div {
-		margin: 0;
-		padding: 0;
-
-		&:nth-child(1) {
-			padding: 0 10px;
-		}
-
-		&:nth-child(2) {
-			padding: 0 10px;
-		}
-	}
 }
 
 /*************************************************
@@ -220,6 +216,7 @@
 	}
 
 	.bottom {
+		margin: 0 10px;
 		p { float: left; }
 		a { color: #000000; /*text-decoration: underline;*/ }
 
@@ -340,7 +337,7 @@
 } // End: Service Block
 
 // Start: Stock Block
-.stock-block { padding-top: 25px;
+.stock-block { padding: 25px 10px 0px 10px;
 
 	//h4 { font-weight: bold; border-bottom: 2px solid #ddd; padding-bottom: 10px; margin-bottom: 0;}
 	.glyphicon-arrow-up { color: green; }
@@ -369,9 +366,15 @@
 
 /*About Us*/
 .about-us-block {
+	padding: 0px 10px;
 	.page-title { padding-bottom: 0; }
 	ul { list-style: none; margin: 0; padding: 0 15px; }
 	.stock-block { padding: 15px 15px 0; }
+}
+
+.appointment-block {
+	max-width: 500px;
+	margin: auto;
 }
 
 /*Contact US*/
@@ -384,9 +387,6 @@
 		textarea { font-size: 15px; width: 100%; height: 100px; padding: 5px 7px; }
 		.submit { width: auto; }
 		i { width: 25px; padding-right: 10px; }
-		.rm-margin {
-			padding: 0;
-		}
 	}
 
 	.title { font-weight: bold; }
