--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -117,6 +117,13 @@
 	padding: 10px 20px;
 }
 
+.appointment-block {
+	.bg-success, .bg-danger {
+		margin-top: 20px;
+		padding: 50px 40px;
+	}
+}
+
 /*************************************************
 *************** Start: Master Header *************
 *************************************************/
