--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,7 +4,11 @@
   .stock-block .left .right {
     padding-left: 5px; }
   .stock-block .right {
-    padding-left: 10px; } }
+    padding-left: 10px; }
+  .download-block .left {
+    paddin-right: 5px; }
+  .download-block .right {
+    padding-left: 15px; } }
 
 /*************************************************
 ************ Start: Media Max Width 991 **********
@@ -335,41 +339,35 @@
   margin: auto; }
 
 /*Contact US*/
-.contact-us-block .information .row {
-  padding: 0 15px; }
-
-.contact-us-block .information h2 {
-  margin-top: 0; }
-
-.contact-us-block .information select {
-  width: 100%;
-  font-size: 15px;
-  padding: 2px 7px; }
-
-.contact-us-block .information input {
-  width: 100%;
-  font-size: 15px;
-  padding: 2px 7px; }
-
-.contact-us-block .information textarea {
-  font-size: 15px;
-  width: 100%;
-  height: 100px;
-  padding: 5px 7px; }
-
-.contact-us-block .information .submit {
-  width: auto; }
-
-.contact-us-block .information i {
-  width: 25px;
-  padding-right: 10px; }
-
-.contact-us-block .title {
-  font-weight: bold; }
-
-.contact-us-block .title, .contact-us-block .content {
-  padding-bottom: 10px;
-  font-size: 15px; }
+.contact-us-block {
+  padding: 0 10px; }
+  .contact-us-block .information .row {
+    padding: 0 15px; }
+  .contact-us-block .information h2 {
+    margin-top: 0; }
+  .contact-us-block .information select {
+    width: 100%;
+    font-size: 15px;
+    padding: 2px 7px; }
+  .contact-us-block .information input {
+    width: 100%;
+    font-size: 15px;
+    padding: 2px 7px; }
+  .contact-us-block .information textarea {
+    font-size: 15px;
+    width: 100%;
+    height: 100px;
+    padding: 5px 7px; }
+  .contact-us-block .information .submit {
+    width: auto; }
+  .contact-us-block .information i {
+    width: 25px;
+    padding-right: 10px; }
+  .contact-us-block .title {
+    font-weight: bold; }
+  .contact-us-block .title, .contact-us-block .content {
+    padding-bottom: 10px;
+    font-size: 15px; }
 
 .ad-app-block {
   text-align: center; }
@@ -394,19 +392,19 @@
 *************** START: Download Page *************
 *************************************************/
 /*download-block*/
-.download-block h3 {
-  font-weight: bold;
-  color: #3471a7; }
-
-.download-block li {
-  padding: 10px 0; }
-
-.download-block .download-table {
-  margin-bottom: 30px; }
-  .download-block .download-table a {
-    font-weight: bold; }
-  .download-block .download-table a:hover {
-    text-decoration: none; }
+.download-block {
+  padding: 0 10px; }
+  .download-block h3 {
+    font-weight: bold;
+    color: #3471a7; }
+  .download-block li {
+    padding: 10px 0; }
+  .download-block .download-table {
+    margin-bottom: 30px; }
+    .download-block .download-table a {
+      font-weight: bold; }
+    .download-block .download-table a:hover {
+      text-decoration: none; }
 
 /*************************************************
 **************** END: Download Page **************
