--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -14,6 +14,16 @@
 			padding-left: 10px;
 		}
 	}
+
+	.download-block {
+		.left {
+			paddin-right: 5px;
+		}
+
+		.right {
+			padding-left: 15px;
+		}
+	}
 }
 
 /*************************************************
@@ -386,6 +396,8 @@
 
 /*Contact US*/
 .contact-us-block {
+	padding: 0 10px;
+
 	.information {
 		.row { padding: 0 15px; }
 		h2 { margin-top: 0; }
@@ -436,6 +448,7 @@
 /*download-block*/
 .download-block {
 
+	padding: 0 10px;
 	h3 { font-weight: bold; color: #3471a7;	 }
 	li { padding: 10px 0; }
 
