--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -401,7 +401,7 @@
 	.information {
 		.row { padding: 0 15px; }
 		h2 { margin-top: 0; }
-        select { width: 100%; font-size: 15px; padding: 2px 7px; }
+        select { width: 100%; font-size: 15px; padding: 3px 7px; }
 		input { width: 100%; font-size: 15px; padding: 2px 7px; }
 		textarea { font-size: 15px; width: 100%; height: 100px; padding: 5px 7px; }
 		.submit { width: auto; }
@@ -475,7 +475,6 @@
   .index-table thead th { color: #3471a7; font-weight: bold; }
 
   #news-block-header { list-style: none; margin: 0; padding: 0; border-bottom: 2px solid #ddd; padding-bottom: 10px; display: inline-block; width: 100%;
-
     li {
       &:nth-child(1) { float: left; }
       &:nth-child(2) { float: right; padding-top: 10px;
@@ -483,6 +482,7 @@
       }
     }
   }
+
   .news-block { height:235px; overflow: scroll; overflow-x: hidden; margin-bottom: 25px;
 
     .market-news {
@@ -606,6 +606,85 @@
 .market-news-menu .active { border-bottom: double; }
 /*************************************************
 ************** End: Market News Page ***********
+*************************************************/
+
+/*************************************************
+************** Start: Research Report Page ***********
+*************************************************/
+.research-report {
+
+	.title {
+		font-size: 22px; font-weight: bold; color: #373a3f; padding-bottom: 10px;
+	}
+	.info {
+		list-style: none;
+		padding: 0 0 5px;
+		margin: 0;
+		display: inline-block;
+
+		li {
+			float: left;
+			&:nth-child(2) {
+				padding-left: 20px;
+			}
+
+			i {
+				color: #1ab7ec;
+			}
+
+			span {
+				font-weight: bold;
+			}
+		}
+	}
+	.dialog-info {
+		font-size: 14px;
+		li { padding: 0; }
+	}
+	.content {
+		clear: both;
+	}
+	.more {
+		display: inline-block;
+		padding: 6px 20px;
+		color: #FFFFFF;
+		background-color: #373a3f;
+		font-size: 22px;
+		font-weight: bold;
+		margin: 30px 0 10px;
+	}
+
+	.table tbody tr td {
+		border-top: 0;
+	}
+
+	.sub-menu {
+		.title { font-size: 20px; font-weight: bold; padding-bottom: 15px;}
+		ul { list-style: none; padding: 0; margin: 0;
+			li {
+				padding-bottom: 0px;
+				font-size: 12px;
+				.fa-arrow-right {
+					font-weight: bold;
+					color: #0ca0d0;
+				}
+			}
+		}
+		.month {
+			padding-top: 10px;
+			li {
+				float: left;
+				padding: 5px 6px;
+				color: #FFFFFF;
+				background-color: #0ca0d0;
+				margin: 0 7px;
+			}
+		}
+	}
+}
+
+/*************************************************
+************** End: Research Report Page ***********
 *************************************************/
 
 .structure-coming {
