update research content

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -653,6 +653,11 @@
 		font-weight: bold;
 		margin: 30px 0 10px;
 	}
+	.research-disclaimer {
+		padding: 4px 10px;
+		font-size: 14px;
+		margin-top: 10px;
+	}
 
 	.table tbody tr td {
 		border-top: 0;
