--- a/public/css/app.css
+++ b/public/css/app.css
@@ -590,6 +590,11 @@
   font-weight: bold;
   margin: 30px 0 10px; }
 
+.research-report .research-disclaimer {
+  padding: 4px 10px;
+  font-size: 14px;
+  margin-top: 10px; }
+
 .research-report .table tbody tr td {
   border-top: 0; }
 
